--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>civic_watch</title>
   <link rel="manifest" href="manifest.json">
+  
+  <!-- Google Maps -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
